# Snowball

./: Makefile  README.md  Snowball.py  mypy.ini  parameters.cfg  pylint.cfg  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/.workflows/: code_checks.yml
.github/workflows/: code_checks.yml
Snowball/: Config.py  Pattern.py  ReVerb.py  Seed.py  Sentence.py  Tuple.py  VectorSpaceModel.py  __init__.py
snowball/: Config.py  Pattern.py  Snowball.py  Tuple.py  __init__.py  bootstrapping.py  cli.py  commons.py  config.py  pattern.py  reverb.py  reverb_breds.py  seed.py  sentence.py  snowball_tuple.py  tuple.py  vector_space_model.py
tests/: test_commons.py  test_pattern.py  test_seed.py  test_sentence.py  test_snowball_tuple.py
