[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "snowball-extractor"
version = "1.0.5"
authors = [{name = "David S. Batista", email = "dsbatista@gmail.com"}]
description = "Snowball: Extracting Relations from Large Plain-Text Collections"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nlp", "semantic relationship extraction", "bootstrapping", "emnlp",
    "tf-idf", ]
license = {text = "GNU GPLv3"}
classifiers = [
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gensim >= 3.7.3",
    "nltk >= 3.4.1",
    "numpy >= 1.16.3",
    "tqdm >= 4.66.3",
]

[project.optional-dependencies]
dev = [
    "coverage==7.13.5",
    "mypy==1.20.2",

    "pytest==9.0.3",
    "ruff==0.15.8",
]

[project.urls]
homepage = "https://github.com/davidsbatista/Snowball"
documentation = "https://www.davidsbatista.net/assets/documents/publications/breds-emnlp_15.pdf"
repository = "https://github.com/davidsbatista/Snowball"

[project.scripts]
snowball = "snowball.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".git", "__pycache__", "build", "dist", ".tox", "automatic_evaluation"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "C90",  # mccabe complexity
    "PL",   # pylint
    "I",    # isort
]
ignore = [
    "E203",     # whitespace before ':' (formatter compatible)
    "PLW0603",  # global-statement
    "PLR0917",  # too-many-positional-arguments
    "PLR0913",  # too-many-arguments
    "PLR0912",  # too-many-branches
    "PLR0915",  # too-many-statements
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["snowball"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_any_unimported = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.coverage.run]
source = ["snowball"]
omit = ["*__init__*", "snowball/cli.py"]

[tool.coverage.report]
show_missing = true
precision = 2
sort = "Miss"